changed path to image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <h1>HTML & CSS Basics Summary</h1>
-      <img src="https://p92.com/binaries/content/gallery/p92website/technologies/htmlcssjs-details.png" alt="HTMl&CSS" />
+      <img src="./images/html-css.png" alt="HTMl&CSS" />
     </header>
     <main>
       <section>
